--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
+:root{
+  --bg-black:#282c34;
+  --grey-border:#EAE9E9;
+  --btn-red:#F54F42;
+  --btn-orange:#FFAB40;
+  --btn-green:#75C076;
+}
+
+/* Reset */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+ul{
+  list-style-type: none;
+  padding-left:0;
+}
+
+button{
+  border:none;
+  background:none;
+  cursor: pointer;
+}
+
+/* App */
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.App-header{
+  position: relative;
+  width:300px;
+}
+
+.App-container{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App h1{
+  align-self: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Navbar */
+.navbar{
+  min-height: 100vh;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+  font-size: calc(10px + 1.5vmin);
+  position: fixed;
+  width:100px;
+  padding:20px;
 }
+
+.navbar a{
+  text-decoration: none;
+  margin-bottom:40px;
+  width:70px;
+  height:40px;
+  display: flex;
+  align-items: center;
+}
+
+/* Filters */
+
+.filters-container{
+  border:1px solid;
+  padding:5px 10px 10px 10px;
+  display: flex;
+  gap:20px;
+}
+
+/* Inbox */
+.inbox-header,.inbox-btns-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.inbox .mail-item{
+  border:1px solid var(--grey-border);
+  padding:20px;
+  border-radius: 10px;
+}
+
+.inbox-header h3{
+  margin:0;
+}
+
+.inbox-click-container button:nth-of-type(1){
+  color:var(--btn-red);
+}
+
+.inbox-click-container button:nth-of-type(2){
+  color:var(--btn-orange);
+}
+
+.inbox-click-container button:nth-of-type(3){
+  color:var(--btn-green);
+}
+
+.view-btn{
+  padding-left: 0;
+}
+
+
+/* Spam */
+.spam{
+  width:100%;
+  display: flex;
+}
+
+
+/* Trash */
+.trash{
+  width:100%;
+  display: flex;
+}
+
